--- a/portfolio.html
+++ b/portfolio.html
@@ -6,28 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <!--Шапка страницы-->
     <header>
-        <nav>
-            <a lang="en" href="/">WebStudio</a>
+        <nav class="site-nav">
+            <a class="logo" lang="en" href="/"><span class="logo-accent">Web</span>Studio</a>
             <ul>
-                <li><a href="#">Студия</a></li>
-                <li><a href="#">Портфолио</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a class="link" href="./index.html">Студия</a></li>
+                <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link" href="#">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contact-list">
+            <li><a class="link" lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!--Уникальный контент страницы-->
     <main>
-        <!-- Фильтры -->
-        <div>
+        <section>
+            <!-- Фильтры -->
             <ul>
                 <li><button type="button">Все</button></li>
                 <li><button type="button">Веб-сайты</button></li>
@@ -35,9 +38,7 @@
                 <li><button type="button">Дизайн</button></li>
                 <li><button type="button">Маркетинг</button></li>
             </ul>
-        </div>
         <!-- Продукты -->
-        <section>
             <ul>
                 <!-- Продукт 1 -->
                 <li>
