--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студия</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
 </head>
@@ -28,34 +30,34 @@
     <!--Уникальный контент страницы-->
     <main>
         <!-- Секция герой -->
-        <section>
+        <section class="hero">
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+            <button class="hero-button" type="button">Заказать услугу</button>
         </section>
         <!-- Секция преимуществ -->
         <section>
             <ul>
                 <li>
-                    <h3>Внимание к деталям</h3>
+                    <h3 class="list-title">Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
+                    <h3 class="list-title">Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
+                    <h3 class="list-title">Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
+                    <h3 class="list-title">Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <!-- Секция чем мы занимаемся -->
         <section>
-            <h2>Чем мы занимаемся</h2>
+            <h2 class="section-title">Чем мы занимаемся</h2>
             <ul>
                 <li><img src="./images/box1.jpg" alt="Бокс 1" width="370" height="294"></li>
                 <li><img src="./images/box2.jpg" alt="Бокс 2" width="370" height="294"></li>
@@ -63,43 +65,43 @@
             </ul>
         </section>
         <!-- Секция наша команда -->
-        <section>
-            <h2>Наша команда</h2>
+        <section class="team">
+            <h2 class="section-title">Наша команда</h2>
             <ul>
                 <li>
                     <img src="./images/teamcard1.jpg" alt="Игорь Демьяненко" width="270" height="260">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <h3 class="team-member">Игорь Демьяненко</h3>
+                    <p class="position" lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/teamcard2.jpg" alt="Ольга Репина" width="270" height="260">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <h3 class="team-member">Ольга Репина</h3>
+                    <p class="position" lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/teamcard3.jpg" alt="Николай Тарасов" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <h3 class="team-member">Николай Тарасов</h3>
+                    <p class="position" lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/teamcard4.jpg" alt="Михаил Ермаков" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <h3 class="team-member">Михаил Ермаков</h3>
+                    <p class="position" lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <!-- Футер -->
     <footer>
-        <a lang="en" href="/">WebStudio</a>
+        <a class="logo" lang="en" href="/"><span class="logo-accent">Web</span><span class="logo-white">Studio</span></a>
         <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="address"> г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
                 <li>
-                    <a lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="footer-contacts" lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380991111111">+38 099 111 11 11</a>
+                    <a class="footer-contacts" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>     
         </address>
