--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
 </head>
@@ -32,84 +34,84 @@
         <section>
             <!-- Фильтры -->
             <ul>
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+                <li><button class="portfolio-button all" type="button">Все</button></li>
+                <li><button class="portfolio-button" type="button">Веб-сайты</button></li>
+                <li><button class="portfolio-button" type="button">Приложения</button></li>
+                <li><button class="portfolio-button" type="button">Дизайн</button></li>
+                <li><button class="portfolio-button" type="button">Маркетинг</button></li>
             </ul>
         <!-- Продукты -->
-            <ul>
+            <ul class="projects-list">
                 <!-- Продукт 1 -->
                 <li>
                     <a href="">
-                        <img src="./images/productcard1.jpg" alt="Продукт 1" width: 370px; height: 294px;></img>
-                        <h3>Технокряк</h3>
-                        <p>Веб-сайт</p>
+                        <img src="./images/productcard1.jpg" alt="Продукт 1" width="370" height="294">
+                        <h3 class="project">Технокряк</h3>
+                        <p class="project-type">Веб-сайт</p>
                     </a>
                 </li>
                 <!-- Продукт 2 -->
                 <li>
                     <a href="">
-                        <img src="./images/productcard2.jpg" alt="Продукт 2" width: 370px; height: 294px;></img>
-                        <h3>Постер New Orlean vs Golden Star</h3>
-                        <p>Дизайн</p>
+                        <img src="./images/productcard2.jpg" alt="Продукт 2" width="370" height="294">
+                        <h3 class="project">Постер New Orlean vs Golden Star</h3>
+                        <p class="project-type">Дизайн</p>
                     </a>
                 </li>
                 <!-- Продукт 3 -->
                 <li>
                     <a href="">
-                        <img src="./images/productcard3.jpg" alt="Продукт 3" width: 370px; height: 294px;></img>
-                        <h3>Ресторан Seafood</h3>
-                        <p>Приложение</p>
+                        <img src="./images/productcard3.jpg" alt="Продукт 3" width="370" height="294">
+                        <h3 class="project">Ресторан Seafood</h3>
+                        <p class="project-type">Приложение</p>
                     </a>
                 </li>
                 <!-- Продукт 4 -->
                 <li>
                     <a href="">
-                        <img src="./images/productcard4.jpg" alt="Продукт 4" width: 370px; height: 294px;></img>
-                        <h3>Проект Prime</h3>
-                        <p>Маркетинг</p>
+                        <img src="./images/productcard4.jpg" alt="Продукт 4" width="370" height="294">
+                        <h3 class="project">Проект Prime</h3>
+                        <p class="project-type">Маркетинг</p>
                     </a>
                 </li>
                 <!-- Продукт 5 -->
                 <li>
                     <a href="">
-                        <img src="./images/productcard5.jpg" alt="Продукт 5" width: 370px; height: 294px;></img>
-                        <h3>Проект Boxes</h3>
-                        <p>Приложение</p>
+                        <img src="./images/productcard5.jpg" alt="Продукт 5" width="370" height="294">
+                        <h3 class="project">Проект Boxes</h3>
+                        <p class="project-type">Приложение</p>
                     </a>
                 </li>
                 <!-- Продукт 6 -->
                 <li>
                     <a href="">
-                        <img src="./images/productcard6.jpg" alt="Продукт 6" width: 370px; height: 294px;></img>
-                        <h3>Inspiration has no Borders</h3>
-                        <p>Веб-сайт</p>
+                        <img src="./images/productcard6.jpg" alt="Продукт 6" width="370" height="294">
+                        <h3 class="project">Inspiration has no Borders</h3>
+                        <p class="project-type">Веб-сайт</p>
                     </a>
                 </li>
                 <!-- Продукт 7 -->
                 <li>
                     <a href="">
-                        <img src="./images/productcard7.jpg" alt="Продукт 7" width: 370px; height: 294px;></img>
-                        <h3>Издание Limited Edition</h3>
-                        <p>Дизайн</p>
+                        <img src="./images/productcard7.jpg" alt="Продукт 7" width="370" height="294">
+                        <h3 class="project">Издание Limited Edition</h3>
+                        <p class="project-type">Дизайн</p>
                     </a>
                 </li>
                 <!-- Продукт 8 -->
                 <li>
                     <a href="">
-                        <img src="./images/productcard8.jpg" alt="Продукт 8" width: 370px; height: 294px;></img>
-                        <h3>Проект LAB</h3>
-                        <p>Маркетинг</p>
+                        <img src="./images/productcard8.jpg" alt="Продукт 8" width="370" height="294">
+                        <h3 class="project">Проект LAB</h3>
+                        <p class="project-type">Маркетинг</p>
                     </a>
                 </li>
                 <!-- Продукт 9 -->
                 <li>
                     <a href="">
-                        <img src="./images/productcard9.jpg" alt="Продукт 9" width: 370px; height: 294px;></img>
-                        <h3>Growing Business</h3>
-                        <p>Приложение</p>
+                        <img src="./images/productcard9.jpg" alt="Продукт 9" width="370" height="294">
+                        <h3 class="project">Growing Business</h3>
+                        <p class="project-type">Приложение</p>
                     </a>
                 </li>
             </ul>
@@ -118,15 +120,15 @@
     </main>
     <!-- Футер -->
     <footer>
-        <a lang="en" href="/">WebStudio</a>
+        <a class="logo" lang="en" href="/"><span class="logo-accent">Web</span><span class="logo-white">Studio</span></a>
         <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="address"> г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
                 <li>
-                    <a lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="footer-contacts" lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380991111111">+38 099 111 11 11</a>
+                    <a class="footer-contacts" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
